lustre/include/dt_object.h
@@ -1436,8 +1436,8 @@ struct dt_body_operations {
 	 * \retval negative	negated errno on error
 	 */
 	int (*dbo_declare_fallocate)(const struct lu_env *env,
-				    struct dt_object *dt,
-				    struct thandle *th);
+				    struct dt_object *dt, __u64 start,
+				    __u64 end, int mode, struct thandle *th);
 	/**
 	 * Allocate specified region for an object
 	 *
@@ -2587,14 +2587,16 @@ static inline int dt_ladvise(const struct lu_env *env, struct dt_object *dt,
 }
 
 static inline int dt_declare_falloc(const struct lu_env *env,
-				      struct dt_object *dt, struct thandle *th)
+				    struct dt_object *dt, __u64 start,
+				    __u64 end, int mode, struct thandle *th)
 {
 	LASSERT(dt);
 	if (!dt->do_body_ops)
 		return -EOPNOTSUPP;
 	LASSERT(dt->do_body_ops);
 	LASSERT(dt->do_body_ops->dbo_declare_fallocate);
-	return dt->do_body_ops->dbo_declare_fallocate(env, dt, th);
+	return dt->do_body_ops->dbo_declare_fallocate(env, dt, start, end,
+						      mode, th);
 }
 
 static inline int dt_falloc(const struct lu_env *env, struct dt_object *dt,
